<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearlayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runTestSpeed"
            android:text="@string/test" />

        <TextView
            android:id="@+id/speedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/speedResult"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/batteryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runBatteryStatus"
            android:text="@string/battery" />

        <TextView
            android:id="@+id/batteryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/batteryText"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/textRMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runRemote"
            android:text="@string/testRMI" />

        <TextView
            android:id="@+id/textViewRmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/rmiText"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/textLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="runLocal"
            android:text="@string/testLocal" />

        <TextView
            android:id="@+id/textviewLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/localText"
            android:textAlignment="gravity" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTime" />

        <TextView
            android:id="@+id/textviewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/textviewTime"
            android:textAlignment="gravity" />
    </LinearLayout>

    <Button
        android:id="@+id/allTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="runAllTest"
        android:text="@string/allTest" />

</RelativeLayout>